--- a/src/pages/material-mdf.astro
+++ b/src/pages/material-mdf.astro
@@ -33,7 +33,7 @@ const metaTags = {
     url: `${SITE_CONFIG.url}material-mdf/`,
     image: material.image,
     type: 'article',
-    siteName: 'Tepat Laser',
+    siteName: 'Jasa Cutting Laser',
     locale: 'id_ID'
   },
   twitter: {
