--- a/src/pages/material-ply-wood-multiplex.astro
+++ b/src/pages/material-ply-wood-multiplex.astro
@@ -58,7 +58,7 @@ const metaTags = {
       <div class="grid lg:grid-cols-2 gap-12 items-center">
         <div>
           <h1 class="text-4xl lg:text-5xl font-bold mb-6">
-            Jasa Laser Cutting {material.name}
+            raja cutting laser {material.name}
           </h1>
           <p class="text-xl mb-8 text-amber-100">
             {material.description}
